# 4kurs1semester

./: .gitignore  README.md
software_architecture_and_design/: .clang-format  .gitignore  CMakeLists.txt  test.txt
software_architecture_and_design/Client/: AppClient.cpp  AppClient.h  AppClientMain.cpp  CMakeLists.txt
software_architecture_and_design/Client/helpers/: CMakeLists.txt  Socket.cpp  Socket.h  SocketClient.cpp  UtilFile.h
software_architecture_and_design/Monitor/: AppMonitor.cpp  AppMonitor.h  AppMonitorMain.cpp  CMakeLists.txt
software_architecture_and_design/Monitor/helpers/: CMakeLists.txt  Console.cpp  Process.cpp  Process.h
software_architecture_and_design/Server/: AppServer.cpp  AppServer.h  AppServerMain.cpp  CMakeLists.txt
software_architecture_and_design/Server/helpers/: CMakeLists.txt  DataBase.h  Socket.cpp  SocketServer.cpp  SocketServer.h  User.h  UserDataBase.h  UtilFile.h
software_architecture_and_design/Viewer/: AppViewer.cpp  AppViewer.h  AppViewerMain.cpp  CMakeLists.txt
software_architecture_and_design/Viewer/helpers/: CMakeLists.txt  Console.cpp  Console.h  Process.cpp  Process.h  Socket.cpp  Socket.h  SocketClient.cpp  SocketClient.h
software_architecture_and_design/helpers/: CMakeLists.txt  MType.h  MesType.h  Message.h  Token.h  User.h  UtilFile.h  UtilString.h
